# nllm

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_ORIGIN.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
deploy/: Modelfile  docker-compose.yml  quantize.sh
docs/: SUPPORTED_BASES.md  architecture.md  packaging-and-license.md  security-architecture.md
models/: Modelfile.swallow  verify.sh
skills/: camera.txt  drone.txt  home.txt  robot.txt
src/nllm/: __init__.py  types.py
src/nllm/adapters/: __init__.py  llama_cpp.py  mqtt.py  ollama.py  ros2.py
src/nllm/alert/: __init__.py  pipeline.py  rule.py
src/nllm/command/: __init__.py  parser.py  prompt.py
src/nllm/core/: __init__.py  engine.py  sanitizer.py  whitelist.py
src/nllm/device/: __init__.py  camera.py  command.py  drone.py  safety.py
src/nllm/eval/: __init__.py  metrics.py  runner.py
src/nllm/memory/: __init__.py  episodic.py  long_term.py
src/nllm/planning/: __init__.py  executor.py  memory.py  plan.py  registry.py
src/nllm/sensor/: __init__.py  dedup.py  range_check.py  reading.py  schema.py
src/nllm/simulator/: __init__.py  (+2 more)
tests/: test_alert.py  test_command.py  test_core.py  test_device.py  test_eval.py  test_memory.py  test_planning.py  test_sensor.py  test_simulator.py  test_skills.py
training/: eval.py  train_qlora.py
training/data/: camera_alert_ja.jsonl  drone_ja.jsonl  home_appliance_ja.jsonl  iot_commands_ja.jsonl  robot_ja.jsonl  sensor_qa_ja.jsonl
(+2 files in other folders)
